unpackaged/objects/Campaign.object
<CustomObject>
  <fields>
    <fullName>ASTRA_TECH_Implant_System__c</fullName>
    <formula>IF(INCLUDES( Brand__c , "ASTRA TECH Implant System"),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASTRA TECH Implant System</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ATLANTIS_Abutments__c</fullName>
    <formula>IF(INCLUDES( Brand__c , "ATLANTIS Abutments"),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATLANTIS Abutments</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ATLANTIS_Conus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Target information on ATLANTIS Conus if this is criteria of Campaigns</description>
    <inlineHelpText>Target information on ATLANTIS Conus</inlineHelpText>
    <label>ATLANTIS Conus (US)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ATLANTIS_ISUS__c</fullName>
    <formula>IF(INCLUDES( Brand__c , "ATLANTIS ISUS"),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATLANTIS ISUS</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Actual_Cost_per_Participant__c</fullName>
    <description>Shows the actual Cost divided by the Number of Confirmed Attendees. This number might change as long as the Campaign is active (and members are added or possibly removed)</description>
    <formula>Total_Cost_Actual__c  / of_Event_Attendees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the actual Cost divided by the Number of Confirmed Attendees. This number might change as long as the Campaign is active (and members are added or possibly removed)</inlineHelpText>
    <label>Actual Cost per Participant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Additional_Comments__c</fullName>
    <description>Used on NA Activity Request Form</description>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Advertising_Actual__c</fullName>
    <label>Advertising (Actual)</label>
    <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
      <field>Cost_Revenue_Transaction__c.Type__c</field>
      <operation>equals</operation>
      <value>Advertising</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Advertising_Budget__c</fullName>
    <label>Advertising (Budget)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Alternative_Program_Dates__c</fullName>
    <description>Used for the Activity Request form in North America</description>
    <label>Alternative Program Dates</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Alternative_Speaker__c</fullName>
    <description>Used for the Activity Request form in North America</description>
    <inlineHelpText>Please indicate the speaker's first name, last name and location (city, state, province etc)</inlineHelpText>
    <label>Alternative Speaker</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Ankylos__c</fullName>
    <formula>IF( INCLUDES( Brand__c , "ANKYLOS"),TRUE, FALSE)</formula>
    <label>Ankylos</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Approval_Status_DI__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Not Submitted for Approval</fullName>
          <default>true</default>
          <label>Not Submitted for Approval</label>
        </value>
        <value>
          <fullName>Pending</fullName>
        </value>
        <value>
          <fullName>Approved</fullName>
        </value>
        <value>
          <fullName>Rejected</fullName>
        </value>
        <value>
          <fullName>Recalled</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Arrangements_made_by_c__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if all arrangements regarding logistics and session managed by MC.</inlineHelpText>
    <label>Arrangements made by MC?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Arrival_Airport__c</fullName>
    <label>Arrival Airport</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Arrival_Flight_Number__c</fullName>
    <label>Arrival Flight Number</label>
    <length>40</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Arrival_Time_Date__c</fullName>
    <label>Arrival Time &amp; Date</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>AssignRepFromDealer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign Sales Rep from Dealer</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Leads</fullName>
        </value>
        <value>
          <fullName>Contacts</fullName>
        </value>
        <value>
          <fullName>Leads &amp; Contacts</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Blood_FR__c</fullName>
    <label>Blood (FR)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Brand__c</fullName>
    <label>Product Focus (IMPL)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Country__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>ANKYLOS</fullName>
          <label>Ankylos</label>
        </value>
        <value>
          <fullName>ASTRA TECH Implant System</fullName>
          <label>Astra Tech Implant System</label>
        </value>
        <value>
          <fullName>Astra Tech Implant System EV</fullName>
        </value>
        <value>
          <fullName>Astra Tech Implant System Profile</fullName>
        </value>
        <value>
          <fullName>ATLANTIS Abutments</fullName>
        </value>
        <value>
          <fullName>ATLANTIS ISUS</fullName>
        </value>
        <value>
          <fullName>Frialit</fullName>
        </value>
        <value>
          <fullName>Frios</fullName>
        </value>
        <value>
          <fullName>MGuide</fullName>
        </value>
        <value>
          <fullName>MIS-C1</fullName>
        </value>
        <value>
          <fullName>MIS-Lance</fullName>
        </value>
        <value>
          <fullName>MIS-Seven</fullName>
        </value>
        <value>
          <fullName>MIS-V3</fullName>
        </value>
        <value>
          <fullName>Not Applicable</fullName>
        </value>
        <value>
          <fullName>OSSIX</fullName>
        </value>
        <value>
          <fullName>SIMPLANT</fullName>
        </value>
        <value>
          <fullName>STEPPS</fullName>
        </value>
        <value>
          <fullName>SYMBIOS</fullName>
        </value>
        <value>
          <fullName>WeldOne</fullName>
        </value>
        <value>
          <fullName>XiVe</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Brands__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>3D Upgrade</fullName>
        </value>
        <value>
          <fullName>ACB with ASA</fullName>
        </value>
        <value>
          <fullName>AH Plus</fullName>
        </value>
        <value>
          <fullName>AH Temp</fullName>
        </value>
        <value>
          <fullName>AlginX</fullName>
        </value>
        <value>
          <fullName>All Ceramics</fullName>
        </value>
        <value>
          <fullName>All Other Endo</fullName>
        </value>
        <value>
          <fullName>All Other - Niti Rotary Files</fullName>
        </value>
        <value>
          <fullName>All Other – Obturation</fullName>
        </value>
        <value>
          <fullName>Anaestadent</fullName>
        </value>
        <value>
          <fullName>Ancillary</fullName>
        </value>
        <value>
          <fullName>ANKYLOS</fullName>
        </value>
        <value>
          <fullName>Apex Locator</fullName>
        </value>
        <value>
          <fullName>Aquasil</fullName>
        </value>
        <value>
          <fullName>Aquasil Ultra Plus</fullName>
        </value>
        <value>
          <fullName>ATIS</fullName>
        </value>
        <value>
          <fullName>ATIS EV</fullName>
        </value>
        <value>
          <fullName>ATIS TX</fullName>
        </value>
        <value>
          <fullName>Atlantis</fullName>
        </value>
        <value>
          <fullName>Atlantis Abutments</fullName>
        </value>
        <value>
          <fullName>Atlantis Suprastructures</fullName>
        </value>
        <value>
          <fullName>Automate</fullName>
        </value>
        <value>
          <fullName>Axeos</fullName>
        </value>
        <value>
          <fullName>Azento Astra Tech</fullName>
        </value>
        <value>
          <fullName>Azento EV</fullName>
        </value>
        <value>
          <fullName>Azento XiVE</fullName>
        </value>
        <value>
          <fullName>Bioceramic</fullName>
        </value>
        <value>
          <fullName>Bluecam</fullName>
        </value>
        <value>
          <fullName>Bonding</fullName>
        </value>
        <value>
          <fullName>Bone</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Budgeted_Cost_Budgeted_Revenue__c</fullName>
    <description>The Net Cost of the Campaign when the budgeted revenue has been deducted. A negative number implies that this Campaign would deliver profit to DI</description>
    <formula>Total_Cost_Budget__c - Total_Revenue_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Net Cost of the Campaign when the budgeted revenue has been deducted. A negative number implies that this Campaign would deliver profit to DI</inlineHelpText>
    <label>Budgeted Cost - Budgeted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Budgeted_Cost_Per_Participant__c</fullName>
    <description>Shows the budgeted Cost divided by the Number of Confirmed Attendees. This number might change as long as the Campaign is active (and members are added or possibly removed)</description>
    <formula>Total_Cost_Budget__c  /  of_Event_Attendees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the budgeted Cost divided by the Number of Confirmed Attendees. This number might change as long as the Campaign is active (and members are added or possibly removed)</inlineHelpText>
    <label>Budgeted Cost Per Participant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>CAVITE_D_ACCES_FR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used for PREP in France</description>
    <label>CAVITE D’ACCES (FR)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CAVITY_ACCESS_GREEN_FR__c</fullName>
    <label>CAVITY ACCESS GREEN (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>CAVITY_ACCESS_RED_FR__c</fullName>
    <label>CAVITY ACCESS RED (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>California_Course_Description__c</fullName>
    <description>Used to enter specific information for California Courses needed for reporting.</description>
    <inlineHelpText>Used to enter specific information for California Courses needed for reporting.</inlineHelpText>
    <label>California Course Description</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>California_Course_Name__c</fullName>
    <description>If it is a ADA CERP course or a California course the title is required for reporting purposes</description>
    <inlineHelpText>If it is a ADA CERP course or a California course the title is required for reporting purposes</inlineHelpText>
    <label>Course Title</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>CampaignMemberAccountIdList__c</fullName>
    <description>A comma-separated list of account IDs for all campaign members.</description>
    <inlineHelpText>A comma-separated list of account IDs for all campaign members.</inlineHelpText>
    <label>Campaign Member Account ID List</label>
    <length>65535</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>CampaignNotes__c</fullName>
    <label>Campaign Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Campaign_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Campaign_Category__c</fullName>
    <inlineHelpText>"Internal course" and" Lunch and Learn" not included in CE-reporting</inlineHelpText>
    <label>Campaign Category</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Type</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>Clinical/Lab Course</fullName>
        </value>
        <value>
          <fullName>Congress</fullName>
        </value>
        <value>
          <fullName>Curriculum</fullName>
        </value>
        <value>
          <fullName>Customized Program (VIP)</fullName>
        </value>
        <value>
          <fullName>Facility Visit Only</fullName>
        </value>
        <value>
          <fullName>Fair</fullName>
        </value>
        <value>
          <fullName>Hospitation</fullName>
        </value>
        <value>
          <fullName>Internal Course</fullName>
        </value>
        <value>
          <fullName>Lecture/Seminar</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Program Modular Course</fullName>
        </value>
        <value>
          <fullName>Referral Course</fullName>
          <label>Refer and Restore</label>
        </value>
        <value>
          <fullName>Roadshow</fullName>
        </value>
        <value>
          <fullName>Social Event</fullName>
        </value>
        <value>
          <fullName>Staff Event</fullName>
        </value>
        <value>
          <fullName>Student Course</fullName>
        </value>
        <value>
          <fullName>Study Group</fullName>
        </value>
        <value>
          <fullName>Summit</fullName>
        </value>
        <value>
          <fullName>Support/Sponsorship</fullName>
        </value>
        <value>
          <fullName>Brochure</fullName>
        </value>
        <value>
          <fullName>Gimmick</fullName>
        </value>
        <value>
          <fullName>Leaflet</fullName>
        </value>
        <value>
          <fullName>Price List</fullName>
        </value>
        <value>
          <fullName>Product Information</fullName>
        </value>
        <value>
          <fullName>Lunch and Learn</fullName>
        </value>
        <value>
          <fullName>Webinar</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Campaign_City__c</fullName>
    <label>Campaign City</label>
    <length>56</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Campaign_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Campaign_Country__c</fullName>
    <description>Country where the Campaign is taking place.</description>
    <inlineHelpText>Country where the Campaign is taking place.</inlineHelpText>
    <label>Campaign Country</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Algeria</fullName>
        </value>
        <value>
          <fullName>Australia</fullName>
        </value>
        <value>
          <fullName>Austria</fullName>
        </value>
        <value>
          <fullName>Bahrain</fullName>
        </value>
        <value>
          <fullName>Bangladesh</fullName>
        </value>
        <value>
          <fullName>Belarus</fullName>
        </value>
        <value>
          <fullName>Belgium</fullName>
        </value>
        <value>
          <fullName>Brazil</fullName>
        </value>
        <value>
          <fullName>Bulgaria</fullName>
        </value>
        <value>
          <fullName>Cambodia</fullName>
        </value>
        <value>
          <fullName>Canada</fullName>
        </value>
        <value>
          <fullName>Chile</fullName>
        </value>
        <value>
          <fullName>China</fullName>
        </value>
        <value>
          <fullName>Colombia</fullName>
        </value>
        <value>
          <fullName>Croatia</fullName>
        </value>
        <value>
          <fullName>Cyprus</fullName>
        </value>
        <value>
          <fullName>Czech Republic</fullName>
        </value>
        <value>
          <fullName>Denmark</fullName>
        </value>
        <value>
          <fullName>Egypt</fullName>
        </value>
        <value>
          <fullName>Estonia</fullName>
        </value>
        <value>
          <fullName>Finland</fullName>
        </value>
        <value>
          <fullName>France</fullName>
        </value>
        <value>
          <fullName>Germany</fullName>
        </value>
        <value>
          <fullName>Greece</fullName>
        </value>
        <value>
          <fullName>Holland</fullName>
        </value>
        <value>
          <fullName>Hong Kong</fullName>
        </value>
        <value>
          <fullName>Hungary</fullName>
        </value>
        <value>
          <fullName>Iceland</fullName>
        </value>
        <value>
          <fullName>India</fullName>
        </value>
        <value>
          <fullName>Indonesia</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Campaign_End_Time__c</fullName>
    <label>End Time</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Campaign_Name_Campaign_ID__c</fullName>
    <description>A Concatenation of Campaign name and Campaign ID. Used in reports</description>
    <formula>HYPERLINK("/" &amp; Id ,  Name &amp; " (" &amp;   Project_ID__c &amp; ")" ,"_self")</formula>
    <inlineHelpText>A Concatenation of Campaign name and Campaign ID</inlineHelpText>
    <label>Campaign Name + Campaign ID</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Campaign_Objectives__c</fullName>
    <label>Campaign Objectives</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Campaign_Owner__c</fullName>
    <description>This field is only used in E-mail Template since Owner appearantly is not available!</description>
    <formula>Owner.FirstName  &amp; " "  &amp;  Owner.LastName</formula>
    <inlineHelpText>This field is only used in E-mail Template since Owner appearantly is not available!</inlineHelpText>
    <label>Campaign Owner</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Campaign_Product__c</fullName>
    <label>Campaign Product</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Campaign_Region_DE__c</fullName>
    <description>Field used in Germany and France to be able to track campaigns per region (not always the same as cost unit).</description>
    <label>Campaign Region</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Campaign_Country__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>CENTRAL CA</fullName>
        </value>
        <value>
          <fullName>EAST CA</fullName>
        </value>
        <value>
          <fullName>WEST CA</fullName>
        </value>
        <value>
          <fullName>Centro Nord</fullName>
        </value>
        <value>
          <fullName>Centro Sud</fullName>
        </value>
        <value>
          <fullName>Chubu</fullName>
        </value>
        <value>
          <fullName>Clinical 11</fullName>
        </value>
        <value>
          <fullName>Clinical 12</fullName>
        </value>
        <value>
          <fullName>Clinical 13</fullName>
        </value>
        <value>
          <fullName>Clinical 14</fullName>
        </value>
        <value>
          <fullName>Clinical 15</fullName>
        </value>
        <value>
          <fullName>Clinical 21</fullName>
        </value>
        <value>
          <fullName>Clinical 22</fullName>
        </value>
        <value>
          <fullName>Clinical 23</fullName>
        </value>
        <value>
          <fullName>Clinical 24</fullName>
        </value>
        <value>
          <fullName>Clinical 25</fullName>
        </value>
        <value>
          <fullName>Clinical 31</fullName>
        </value>
        <value>
          <fullName>Clinical 32</fullName>
        </value>
        <value>
          <fullName>Clinical 33</fullName>
        </value>
        <value>
          <fullName>Clinical 34</fullName>
        </value>
        <value>
          <fullName>Digital Mid</fullName>
        </value>
        <value>
          <fullName>Digital North</fullName>
        </value>
        <value>
          <fullName>Digital South</fullName>
        </value>
        <value>
          <fullName>Kansai</fullName>
        </value>
        <value>
          <fullName>Kita-Kanto/Tohoku</fullName>
        </value>
        <value>
          <fullName>Kyushu</fullName>
        </value>
        <value>
          <fullName>Minami-Kanto</fullName>
        </value>
        <value>
          <fullName>Nord Est</fullName>
        </value>
        <value>
          <fullName>Nord Ovest</fullName>
        </value>
        <value>
          <fullName>Région Est</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Campaign_Start_Time__c</fullName>
    <label>Start Time</label>
    <length>20</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Campaign_State__c</fullName>
    <label>Campaign State</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Campaign_Country__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>AK</fullName>
        </value>
        <value>
          <fullName>AL</fullName>
        </value>
        <value>
          <fullName>AR</fullName>
        </value>
        <value>
          <fullName>AZ</fullName>
        </value>
        <value>
          <fullName>CA</fullName>
        </value>
        <value>
          <fullName>CO</fullName>
        </value>
        <value>
          <fullName>CT</fullName>
        </value>
        <value>
          <fullName>DC</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>FL</fullName>
        </value>
        <value>
          <fullName>GA</fullName>
        </value>
        <value>
          <fullName>HI</fullName>
        </value>
        <value>
          <fullName>IA</fullName>
        </value>
        <value>
          <fullName>ID</fullName>
        </value>
        <value>
          <fullName>IL</fullName>
        </value>
        <value>
          <fullName>IN</fullName>
        </value>
        <value>
          <fullName>KS</fullName>
        </value>
        <value>
          <fullName>KY</fullName>
        </value>
        <value>
          <fullName>LA</fullName>
        </value>
        <value>
          <fullName>MA</fullName>
        </value>
        <value>
          <fullName>MD</fullName>
        </value>
        <value>
          <fullName>ME</fullName>
        </value>
        <value>
          <fullName>MI</fullName>
        </value>
        <value>
          <fullName>MN</fullName>
        </value>
        <value>
          <fullName>MO</fullName>
        </value>
        <value>
          <fullName>MS</fullName>
        </value>
        <value>
          <fullName>MT</fullName>
        </value>
        <value>
          <fullName>NC</fullName>
        </value>
        <value>
          <fullName>ND</fullName>
        </value>
        <value>
          <fullName>NE</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Campaign_Type_Category__c</fullName>
    <description>Concatenates Campaignt Type and Category. Use for Reports</description>
    <formula>TEXT(Type)  &amp; " - "  &amp;  TEXT(Campaign_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Type &amp; Category</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Campaign_Year__c</fullName>
    <description>The year of the end date of the campaign. Used in reports &amp; dashboards</description>
    <formula>TEXT(YEAR( EndDate ))</formula>
    <inlineHelpText>The year of the end date of the campaign.</inlineHelpText>
    <label>Campaign End Year</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Campaign_for_Analysis_only__c</fullName>
    <description>Used in Reports, should not appear in any Page Layouts</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in Reports, should not appear in any Page Layouts</inlineHelpText>
    <label>Campaign # (for Analysis only)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Carrots_FR__c</fullName>
    <label>Carrots (FR)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Charge_Participants__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this field if Participants should be charged for this Campaign. This does not mean that all participant must be charged</description>
    <inlineHelpText>Set this field if Participants should be charged for this Campaign. This does not mean that all participant must be charged</inlineHelpText>
    <label>Charge Participants?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CoSponsor_RSVP_Name_and_Contact_Info__c</fullName>
    <defaultValue>"Please include Full Name and all contact information (email, phone, fax)"</defaultValue>
    <label>CoSponsor RSVP Name and Contact Info</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Comments_ENDO_FR__c</fullName>
    <label>Comments ENDO (FR)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Comments_Implants_FR__c</fullName>
    <label>Comments IMPL (FR)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Comments_MANT_FR__c</fullName>
    <label>Comments MANT (FR)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Comments_REST_FR__c</fullName>
    <label>Comments REST (FR)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Confirmed_Moderator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmed Moderator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Confirmed Moderator</relationshipLabel>
    <relationshipName>Campaigns3</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Confirmed_Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Confirmed Speaker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Confirmed Speaker</relationshipLabel>
    <relationshipName>Campaigns2</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Consecutive_trans__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interpreter waits for the speaker to finish a sentence or an idea</description>
    <inlineHelpText>Fill in checkbox if this Session will be consecutive translation</inlineHelpText>
    <label>Consecutive Translation?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Contact_Name_at_Venue__c</fullName>
    <description>Used on the North America Activity Request Form</description>
    <label>Contact Name at Venue</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Continuing_Training_FR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field only for France</description>
    <label>Continuing Training (FR)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Contract_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Signed</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Contrat_d_honoraires__c</fullName>
    <description>To be used for France</description>
    <label>Contrat d’honoraires (FR)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>OUI</fullName>
        </value>
        <value>
          <fullName>NON</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Convert_To__c</fullName>
    <label>Convert To:</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Sales Lead</fullName>
        </value>
        <value>
          <fullName>Opportunity</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Cost_Centre__c</fullName>
    <description>Removed DI</description>
    <label>Cost Centre</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Country_Code_3_digit__c</fullName>
    <description>TFUS-000002404 Used by Eloqua</description>
    <label>Country Code (3-digit)</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Country_Code_3_digit</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <label>Organizing Country</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>ALL</fullName>
        </value>
        <value>
          <fullName>Australia</fullName>
        </value>
        <value>
          <fullName>Austria</fullName>
        </value>
        <value>
          <fullName>Belarus</fullName>
        </value>
        <value>
          <fullName>Belgium</fullName>
        </value>
        <value>
          <fullName>BEX</fullName>
        </value>
        <value>
          <fullName>Brazil</fullName>
        </value>
        <value>
          <fullName>Canada</fullName>
        </value>
        <value>
          <fullName>Denmark</fullName>
        </value>
        <value>
          <fullName>Distributor Markets</fullName>
        </value>
        <value>
          <fullName>Finland</fullName>
        </value>
        <value>
          <fullName>France</fullName>
        </value>
        <value>
          <fullName>Germany</fullName>
        </value>
        <value>
          <fullName>Holland</fullName>
        </value>
        <value>
          <fullName>Hong Kong</fullName>
        </value>
        <value>
          <fullName>HQ: DE</fullName>
        </value>
        <value>
          <fullName>HQ: NL</fullName>
        </value>
        <value>
          <fullName>HQ: SE</fullName>
        </value>
        <value>
          <fullName>INDIA</fullName>
        </value>
        <value>
          <fullName>Italy</fullName>
        </value>
        <value>
          <fullName>Japan</fullName>
        </value>
        <value>
          <fullName>Korea</fullName>
        </value>
        <value>
          <fullName>Luxembourg</fullName>
        </value>
        <value>
          <fullName>Malaysia</fullName>
        </value>
        <value>
          <fullName>New Zealand</fullName>
        </value>
        <value>
          <fullName>Norway</fullName>
        </value>
        <value>
          <fullName>Philippines</fullName>
        </value>
        <value>
          <fullName>Poland</fullName>
        </value>
        <value>
          <fullName>Portugal</fullName>
        </value>
        <value>
          <fullName>Russia</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Course_California_Only__c</fullName>
    <description>California course code field to be visible for all North American campaign users.</description>
    <inlineHelpText>Special code for CE courses taking place in California.</inlineHelpText>
    <label>Course # (California Only)</label>
    <length>30</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Course_Level_D__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Type</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>Basic</fullName>
        </value>
        <value>
          <fullName>Intermediate</fullName>
        </value>
        <value>
          <fullName>Advanced</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Course_Title_and_Description__c</fullName>
    <defaultValue>"“Enter title, course description and objectives only if developing a custom program"</defaultValue>
    <description>Used for the North America Activity Request Form Process</description>
    <label>Course Title and Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Creator_User_Country__c</fullName>
    <formula>TEXT(CreatedBy.User_Country__c)</formula>
    <label>Creator User Country</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Credits__c</fullName>
    <label>Credits</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
  </fields>
</CustomObject>